--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "golang-migrate-npm",
+  "name": "golang-migrate",
   "version": "4.15.2",
   "description": "An npm package that wraps the golang-migrate binary",
   "bin": "bin/migrate",
