--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "golang-migrate",
   "version": "4.15.2",
   "description": "An npm package that wraps the golang-migrate binary",
-  "bin": "bin/migrate",
+  "bin": "./bin/migrate",
   "scripts": {
-    "install": "install.js"
+    "install": "./install.js"
   },
   "license": "MIT",
   "repository": {
