--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "4.15.2",
   "description": "An npm package that wraps the golang-migrate binary",
   "scripts": {
-    "install": "./install.js"
+    "install": "install.js",
+    "uninstall": "uninstall.js"
   },
   "license": "MIT",
   "repository": {
